fixed gap issue in small device

--- a/assets/scss/layouts/_header.scss
+++ b/assets/scss/layouts/_header.scss
@@ -62,6 +62,10 @@ header {
 
   .social-links {
     gap: 14px;
+
+    a svg path {
+      stroke: #000;
+    }
   }
 
   // launch console
